Plumbing finally in place for imsg. A few leak fixes and logging tightening.

--- a/thingsd/Makefile
+++ b/thingsd/Makefile
@@ -1,7 +1,8 @@
 PROG=		thingsd
 
 SRCS=		parse.y
-SRCS+=		log.c serial.c sockets.c client.c events.c tls.c
+SRCS+=		log.c serial.c sockets.c client.c events.c tls.c control.c
+SRCS+=		ctl.c
 
 SRCS+=		thingsd.c
 
