--- a/thingsctl/Makefile
+++ b/thingsctl/Makefile
@@ -1,6 +1,6 @@
 PROG=		thingsctl
 
-SRCS+=		thingsctl.c
+SRCS+=		thingsctl.c parser.c
 
 INC_C_DIR=	/usr/local
 BINDIR?=	${INC_C_DIR}/sbin
@@ -8,13 +8,13 @@ MANDIR?=	${INC_C_DIR}/man/man
 
 DEBUG=		-g -DDEBUG=3 -O0
 
+LDADD=		-lutil
 CFLAGS+=	-Wall -I${.CURDIR}
 CFLAGS+=	-Wstrict-prototypes -Wmissing-prototypes
 CFLAGS+=	-Wmissing-declarations
 CFLAGS+=	-Wshadow -Wpointer-arith
 CFLAGS+=	-Wsign-compare -pthread
-
-CLEANFILES+=	y.tab.h
+CFLAGS+=	-I${.CURDIR} -I${.CURDIR}/../thingsd
 
 MAN=		thingsctl.8
 
