add prefork to thingsd.conf example file

--- a/thingsd/examples/etc/thingsd.conf
+++ b/thingsd/examples/etc/thingsd.conf
@@ -2,6 +2,9 @@
 # Global Options
 #
 
+# Run 10 processes to greatly improve performance
+prefork 10
+
 # Default global things listening port for client connections
 default port 50000
 
