fix for -fno-common

--- a/thingsd/Makefile
+++ b/thingsd/Makefile
@@ -11,7 +11,7 @@ MANDIR?=	${PREFIX}/man/man
 CFLAGS +=	-Wall -I${.CURDIR}
 CFLAGS +=	-Wstrict-prototypes -Wmissing-prototypes
 CFLAGS +=	-Wmissing-declarations
-CFLAGS +=	-Wshadow -Wpointer-arith
+CFLAGS +=	-Wshadow -Wpointer-arith -fno-common
 CFLAGS +=	-Wsign-compare -pthread
 YFLAGS =
 LDADD =		-levent -ltls -lssl -lcrypto -lutil -pthread
