Complete refactor and majority rewrite for v4 upcoming release.
Changelog:

* Well, almost everything. I made a huge assumption error on the conversion to
privsep proc model. This changes all things listening sockets to actually use
that model. All things remain in privileged process. There are still some
issues to address, but this is good enough for now.

* moved "socket" code to sockets.c and out of client.c
* keep things in priv process. this needs to remain, especially for ip_addr things
* only allow one listening port per thing. sharing was a bad idea in the beginning
* only allow a client to subscribe to one thing. this greatly improves things.
* require udp binding interface
* fix unnoticed problem about sockets not getting opened everywhere when requested
* thingsctl hasn't been touched yet
* i'm sure there's a ton i missed

--- a/thingsctl/Makefile
+++ b/thingsctl/Makefile
@@ -11,7 +11,7 @@ CFLAGS+=	-Wall -I${.CURDIR}
 CFLAGS+=	-Wstrict-prototypes -Wmissing-prototypes
 CFLAGS+=	-Wmissing-declarations
 CFLAGS+=	-Wshadow -Wpointer-arith
-CFLAGS+=	-Wsign-compare -pthread
+CFLAGS+=	-Wsign-compare -fno-common
 CFLAGS+=	-I${.CURDIR} -I${.CURDIR}/../thingsd
 
 MAN=		thingsctl.8
