--- a/thingsd/Makefile
+++ b/thingsd/Makefile
@@ -1,6 +1,7 @@
 PROG =		thingsd
-SRCS =		config.c control.c things.c log.c thingsd.c parse.y proc.c \
-		tls.c serial.c sockets.c events.c client.c
+SRCS =		parse.y
+SRCS +=		config.c control.c log.c thingsd.c proc.c
+SRCS +=		sockets.c tls.c client.c
 
 MAN =		thingsd.8 thingsd.conf.5
 
@@ -8,17 +9,16 @@ PREFIX=		/usr/local
 BINDIR?=	${PREFIX}/sbin
 MANDIR?=	${PREFIX}/man/man
 
+LDADD =		-levent -ltls -lssl -lcrypto -lutil
+DPADD =		${LIBEVENT} ${LIBTLS} ${LIBSSL} ${LIBCRYPTO} ${LIBUTIL}
+DEBUG=		-g -DDEBUG=0 -O0
 CFLAGS +=	-Wall -I${.CURDIR}
 CFLAGS +=	-Wstrict-prototypes -Wmissing-prototypes
 CFLAGS +=	-Wmissing-declarations
 CFLAGS +=	-Wshadow -Wpointer-arith -fno-common
-CFLAGS +=	-Wsign-compare -pthread
+CFLAGS +=	-Wsign-compare
 YFLAGS =
-LDADD =		-levent -ltls -lssl -lcrypto -lutil -pthread
-DPADD =		${LIBEVENT} ${LIBTLS} ${LIBSSL} ${LIBCRYPTO} ${LIBUTIL}
 
 CLEANFILES+=	y.tab.h
-
-DEBUG=		-g -O2
 
 .include <bsd.prog.mk>
