--- a/thingsd/examples/etc/thingsd.conf
+++ b/thingsd/examples/etc/thingsd.conf
@@ -5,24 +5,21 @@
 # Run 10 processes to greatly improve performance
 prefork 10
 
-# Default global things listening port for client connections
-default port 50000
+# Default listener bind interface
+bind tcp interface "re1"
 
-# Default bind interface
-bind interface "re1"
+# Default udp bind interface
+bind udp interface "lo0"
 
 # Default maximum number of clients for each thing
 max clients 2
-
-# Maximum subscription requests per client
-max subscriptions 5
 
 # Thing reconnect timer in seconds
 # this is approximate to the event base timer
 # default is 30 seconds
 # min is 10 seconds
 # max is 600 seconds
-connection retry 60
+connection retry 10
 
 #
 # Device Setup
@@ -31,7 +28,7 @@ connection retry 60
 thing "thing1" {
 	location "/dev/ttyU0" {
 		baud 9600
-		listen on port 50002
+		listen on port 50010
 		max clients 1
 		data 8
 		parity "none"
@@ -42,6 +39,7 @@ thing "thing1" {
 thing "thing2" {
 	ipaddr "10.0.0.1" {
 		connect on port 8080
+		listen on port 50020
 		max clients 2
 		persistent 0
 		password "Mother"
@@ -51,8 +49,8 @@ thing "thing2" {
 thing "thing3" {
 	ipaddr "10.0.0.2" {
 		connect on port 80
-		listen on port 51000
-		bind interface "lo0"
+		listen on port 50030
+		bind tcp interface "lo0"
 		password "Father"
 	}
 }
@@ -61,6 +59,7 @@ thing "software_thing4" {
 	udp "my_listener" {
 		receive on port 8080
 		listen on port 51000
+		bing udp interface "re0"
 		password "Sister"
 	}
 }
